# mycode

./: .gitignore  README.md
algorithms/: CMakeLists.txt  Makefile  main.cpp
algorithms/base/: Common.h
algorithms/graph/: Graphs.h
algorithms/misc/: Miscellany.h  MiscellanyVerifer.cpp
algorithms/number_theory/: NumberTheory.cpp  NumberTheory.h  NumberTheoryVerifier.cpp
algorithms/searching/: BalancedSearchTree.cpp  SearchingVerifier.cpp  SymbolTable.h
algorithms/sorting/: Heap.cpp  Heap.h  Sorting.cpp  Sorting.h  SortingVerifier.cpp
algorithms/string/: Strings.h
exercises/: CMakeLists.txt  CPlusPlus.cpp  LintCode.cpp  LintCode.h  Makefile  Miscellany.cpp  Miscellany.h  NowCoder.cpp  NowCoder.h  NowCoderVerifier.cpp  ProjectEuler.cpp  create.sh  result.xml
exercises/LeetCode/: LeetCodeA.cpp  LeetCodeA.h  LeetCodeB.cpp  LeetCodeBVerifier.cpp  LeetCodeDataStructure.cpp
exercises/interviews/: BAT.cpp  BAT.h  BATVerifier.cpp  NetEase.cpp  NetEase.h  NetEaseVerifier.cpp
exercises/stl/: MultiThreading.cpp  Others.cpp
gmock/: BaseInterface.h  Makefile  MockComplement.cc  MockComplement.h  RealComplement.cc
gtest/: Makefile  foo.cpp
java/: .classpath  .gitignore  AlgorithmTest.java
media/: .cproject  .project  change.sh
media/avformat/format/: Android.mk  config.mak  copyAndroidCode.sh
media/avformat/yuv/: Makefile  main.cpp
media/demo/ates_test/: Android.mk  AtesTest.cpp  AtestbCheckMock.c
media/demo/board_test/: BoardTest.cpp  BoardTest.h  BoardTestConfig.cpp  BoardTestConfig.h  CamLinux.mk  board_test_config.xml  main.cpp
media/demo/camera_test/: CameraDemo.cpp
media/demo/display_test/: CamLinux.mk  DisplayTest.cpp
media/demo/led_test/: CamLinux.mk  LEDTest.cpp
media/demo/mic_test/: CamLinux.mk  MICDemo.cpp  MICDemo.h  MICTest.cpp
media/demo/player_test/: Android.mk  PlayerDemo.cpp  PlayerDemo.h  PlayerTest.cpp
media/demo/rotate_test/: Android.mk  Makefile  RotateDemo.cpp  RotateDemo.h  RotateTest.cpp  arm_neon.h
media/demo/rtc_test/: CamLinux.mk  RTCDemo.cpp  RTCDemo.h  RTCTest.cpp
media/demo/screen_test/: Android.mk  ScreenTest.cpp  SubWindow.cpp  SubWindow.h
media/demo/sensor_test/: Android.mk  SensorDemo.cpp  SensorDemo.h  SensorTest.cpp
media/demo/speaker_test/: CamLinux.mk  SpeakerDemo.cpp  SpeakerDemo.h  SpeakerTest.cpp
media/demo/tfcard_test/: CamLinux.mk  TFCardDemo.cpp  TFCardDemo.h  TFCardTest.cpp
media/demo/wifi_test/: CamLinux.mk  WiFiDemo.cpp  WiFiDemo.h  WiFiTest.cpp
media/image/: Makefile
media/image/data/: 270.yuv  320x240_front_buffer.rgb  368x640.yuv  640x368_rotated_90.yuv  768x1024.yuv
media/image/include/: Bitmap.h  Log.h  RawPlayer.h
media/image/src/: Bitmap.cpp  RawPlayerSDL.cpp  RawPlayerSDL2.cpp
media/image/watermark/: waterMark.cpp  waterMark.h
media/player/: README.md
media/player/src/: SimplePlayer.cpp  SimplePlayer.h
opencv/: CMakeLists.txt
python/: python.py
qt/: .gitignore
qt/console/: MyApplication.cpp  MyApplication.h  MyObject.cpp  MyObject.h  MyThread.cpp  MyThread.h  main.cpp
qt/coordinateBuilder/: MainWindow.cpp  MainWindow.ui
qt/raspberrypi_video/: Makefile
qt/widget/: icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  netaddress.cpp  netaddress.h  netaddress.ui  widget.rc
rtls/: .gitignore
rtls/docs/others/: UWB系统技术说明(精位).docx  中华人民共和国无线电频率划分规定.doc
rtls/src/trilateration/: DeviceManager.cpp  DeviceManager.h  LinearLeastSquare.cpp  LinearLeastSquare.h  Log.h  Makefile  Mathematics.cpp  Mathematics.h  Matrix.cpp  Matrix.h  Trilateration.cpp  Trilateration.h  TrilaterationTest.cpp  WoxuTest.cpp
rtls/src/verifier/: Makefile  verifier.cpp
shell/: build_repo.sh  clean.sh  compile_release_encrypted_library.sh  copy.sh  lsfd.sh  print_reg.sh  push.sh  replace.sh  repo.sh
study/: SurfaceFlinger.mdj  TREKDisplay.mdj
tests/: CMakeLists.txt  Makefile  sdl2.cpp  test.c  test.cpp  test.txt  test2.cpp  testShareLibrary.cpp
training/algorithms/: CMakeLists.txt  Makefile
training/algorithms/graphs/: Graphs.cpp  GraphsVerifier.cpp
training/algorithms/misc/: Miscellany.cpp
training/algorithms/searching/: BalancedSearchTree.h  BinarySearchTree.cpp  BinarySearchTree.h  (+2 more)
training/exercises/: CPlusPlus.h  Common.h  LintCodeVerifier.cpp  NowCoder.cpp  NowCoderVerifier.cpp  STL.cpp
training/opencv/: DisplayImage.cpp
training/tests/: analyser.cpp  data.h  testC.c  testCPP.cpp
(+89 files in other folders)
